--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,6 @@
     <!-- =============10==================== -->
     <load ="partials/footer.html" />
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
