update main html

--- a/src/index.html
+++ b/src/index.html
@@ -21,27 +21,28 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <!-- =============1==================== -->
+    <!-- =============BogdanTitsky==================== -->
     <load ="partials/header.html" />
-    <!-- =============2==================== -->
-    <load ="partials/hero.html" />
-    <!-- =============3==================== -->
-    <load ="partials/advantages.html" />
-    <!-- =============4==================== -->
-    <load ="partials/unique_components.html" />
-    <!-- =============5==================== -->
-    <load ="partials/how_its_made.html" />
-    <!-- =============6==================== -->
-    <load ="partials/our_products.html" />
-    <!-- =============7==================== -->
-    <load ="partials/top_sellers.html" />
-    <!-- =============8==================== -->
-    <load ="partials/reviews.html" />
-    <!-- =============9==================== -->
-    <load ="partials/subscribe.html" />
-    <!-- =============10==================== -->
+    <main>
+      <!-- =============Haluna2903==================== -->
+      <load ="partials/hero.html" />
+      <!-- =============Romamill==================== -->
+      <load ="partials/advantages.html" />
+      <!-- =============IrynaBarnych==================== -->
+      <load ="partials/unique_components.html" />
+      <!-- =============PashokGonchar==================== -->
+      <load ="partials/how_its_made.html" />
+      <!-- =============YNazymko12==================== -->
+      <load ="partials/our_products.html" />
+      <!-- =============AnastasiiaKhranovska==================== -->
+      <load ="partials/top_sellers.html" />
+      <!-- =============Kishyk==================== -->
+      <load ="partials/reviews.html" />
+      <!-- =============tetiana-ukr==================== -->
+      <load ="partials/subscribe.html" />
+    </main>
+    <!-- =============Leonid9797==================== -->
     <load ="partials/footer.html" />
-
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
